external-crates/move/crates/move-compiler/tests/move_2024/typing/dot_call_fails_to_resolve_help.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04023]: invalid method call
   ┌─ tests/move_2024/typing/dot_call_fails_to_resolve_help.move:31:9
   │
13 │     public fun zero(): Point {
   │                ---- The function 'a::space::zero' exists, but it takes no arguments
   ·
31 │         p.zero();
   │         ^^^^^^^^ Invalid method call. No known method 'zero' on type 'a::space::Point'

error[E04023]: invalid method call
   ┌─ tests/move_2024/typing/dot_call_fails_to_resolve_help.move:32:9
   │
21 │     public fun len(_: &Line): u64 {
   │                       ----- The function 'a::space::len' exists, but it has a different type for its first argument, '&a::space::Line'
   ·
32 │         p.len();
   │         ^^^^^^^ Invalid method call. No known method 'len' on type 'a::space::Point'
